tests/specs/ecosystem/poolifier/poolifier/3_1_28.test
poolifier/poolifier/3.1.28
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2305 [ERROR]: Module '"node:events"' has no exported member 'EventEmitterAsyncResource'.
import { EventEmitterAsyncResource } from 'node:events';
         ~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/abstract-pool.ts:1:10

TS2305 [ERROR]: Module '"node:events"' has no exported member 'EventEmitterAsyncResource'.
import type { EventEmitterAsyncResource } from 'node:events';
              ~~~~~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/pools/pool.ts:2:15

Found 2 errors.

